welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:8: error: type mismatch;
 found   : Unit
 required: Boolean
		if (talking==true) {
                ^parotTrouble:2: error: type mismatch;
 found   : Unit
 required: Boolean
	if(talking==true) {
        ^